# mdbook-translator

./: BLOG_POST.md  Cargo.toml  README.md  README_CN.md  README_EN.md
src/: command_handler.rs  lib.rs  main.rs  translate_preprocessor.rs
