[package]
name = "mdbook-translator"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
reqwest = { version = "0.12", features = ["json", "blocking"] }
mdbook = "0.4.52"
sha2 = "0.10.9"
log = "0.4.27"
semver = "1.0.26"
clap = "4.5.47"
pulldown-cmark = "0.13.0"