[package]
name = "mdbook-translator"
version = "0.1.4"
edition = "2024"
description = "A translation preprocessor plugin for mdBook that automatically translates documents using the DeepSeek API"
license = "MIT"
homepage = "https://github.com/BUB97/mdbook-translator"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
anyhow = "1.0.99"
reqwest = { version = "0.12", features = ["json", "blocking"] }
mdbook = "0.4.52"
sha2 = "0.10.9"
log = "0.4.27"
semver = "1.0.26"
clap = "4.5.47"
toml = "0.5"